--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -270,7 +270,8 @@ header {
     color: #fff;
     background-attachment: scroll;
     background-image: url('{{ site.baseurl }}/img/header-bg.jpg');
-    background-position: center center;
+    background-position: 0px -50px;
+    /* opacity: 0.9; */
     background-repeat: none;
     -webkit-background-size: cover;
     -moz-background-size: cover;
