--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,8 +44,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Vinayak Ramavath</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in">You are awesome! Don't let anyone tell you otherwise.</div>
+                <div class="intro-heading">Web Developer</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
