--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">You are awesome! Don't let anyone tell you otherwise.</div>
-                <div class="intro-heading">Web Developer</div>
+                <div class="intro-heading">Full Stack Developer</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
